--- a/config.json
+++ b/config.json
@@ -68,7 +68,7 @@
     "training_enable_tensorboard": false,
     "training_tensorboard_save_images": false,
     "training_tensorboard_flush_every": 120,
-    "sd_model_checkpoint": "RealisticVisionV4.safetensors [e9d3cedc4b]",
+    "sd_model_checkpoint": "RealisticVisionV5.safetensors",
     "sd_checkpoint_cache": 0,
     "sd_vae_checkpoint_cache": 0,
     "sd_vae": "VAE84.vae.pt",
