--- a/INITIAL_MODELS.yaml
+++ b/INITIAL_MODELS.yaml
@@ -1,9 +1,22 @@
 # This file predefines a few models that the user may want to install.
+sd-1/main/majicMIXrealisticv7:
+   path: https://civitai.com/api/download/models/176425?type=Model&format=SafeTensor&size=pruned&fp=fp16
+   repo_id: majicMIXrealisticv7
+   recommended: True
+   default: True
+sd-1/main/ChilloutMix32:
+   path: https://civitai.com/api/download/models/11745
+   repo_id: ChilloutMix32
+   recommended: True
+sd-1/main/RealisticVisionv5.1:
+   path: https://civitai.com/api/download/models/130072?type=Model&format=SafeTensor&size=full&fp=fp16
+   repo_id: RealisticVisionv5.1
+   recommended: True
 sd-1/main/stable-diffusion-v1-5:
    description: Stable Diffusion version 1.5 diffusers model (4.27 GB)
    repo_id: runwayml/stable-diffusion-v1-5
-   recommended: True
-   default: True
+   recommended: False
+   default: False
 sd-1/main/stable-diffusion-inpainting:
    description: RunwayML SD 1.5 model optimized for inpainting, diffusers version (4.27 GB)
    repo_id: runwayml/stable-diffusion-inpainting
@@ -77,7 +90,7 @@ sd-1/controlnet/canny:
    recommended: True
 sd-1/controlnet/inpaint:
    repo_id: lllyasviel/control_v11p_sd15_inpaint
-   recommended: False
+   recommended: True
 sd-1/controlnet/mlsd:
    repo_id: lllyasviel/control_v11p_sd15_mlsd
    recommended: False
@@ -121,8 +134,14 @@ sd-1/embedding/ahx-beta-453407d:
    repo_id: sd-concepts-library/ahx-beta-453407d
    recommended: False
 sd-1/lora/LowRA:
+   path: https://civitai.com/api/download/models/177674
+   recommended: True
+sd-1/lora/Nudify XL:
    path: https://civitai.com/api/download/models/63006
    recommended: True
+sd-1/lora/KoreanDollLikeness2:
+   path: https://civitai.com/api/download/models/31284
+   recommended: True   
 sd-1/lora/Ink scenery:
    path: https://civitai.com/api/download/models/83390
    recommended: False
